--- a/app/public/home.html
+++ b/app/public/home.html
@@ -1,27 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
-    
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Friend Finder</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Acme" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <script src="jquery-3.3.1.min.js"></script>
-    
+  <title>Home</title>
+  <link rel="stylesheet" href="css/background.css">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"   integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
+    crossorigin="anonymous"></script>
+ <script
+    src="https://code.jquery.com/jquery-3.3.1.js"
+    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+    crossorigin="anonymous"></script>
+  <style media="screen">
+    a:hover {
+      text-decoration: none;
+    }
+  </style>
 </head>
 
 <body>
 
-    <div class="jumbotron" id="jumboHome">
-        <h1 class="display-4">Friend Finder</h1>
-        <p class="lead">It can get lonely in the 'verse.</p>
-        <hr class="my-4">
-        <p>Answer a few simple but important questions to find friendly folk.</p>
-        <a class="btn btn-primary btn-lg" href="../survey" role="button">Time for some thrillin' heroics.... </a>
+  <div class="container">
+    <br>
+    <br>
+    <br>
+    <div class="jumbotron">
+      <h1>Take the survey</h1>
+      <hr>
+      <!-- Instructions -->
+      <p>Answer a few basic questions.</p>
+      <p>Then find the friend with the greatest compatibility!</p>
+
+      <!-- buttons panel  -->
+
+      <p>
+        <!-- survey button -->
+        <a href="/survey">
+          <button type="button" class="btn btn-lg btn-primary" aria-label="Left Align">
+            <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
+            Take the survey
+          </button>
+        </a>
+
+        <!-- users list button -->
+        <a href="/api/friends">
+          <button type="button" class="btn btn-default btn-lg">
+            <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
+            See all friends
+          </button>
+        </a>
+      </p>
     </div>
+    <hr>
+   </div>
 </body>
+
 </html>
