--- a/app/public/home.html
+++ b/app/public/home.html
@@ -3,8 +3,7 @@
 
 <head>
   <title>Home</title>
-  <link rel="stylesheet" href="css/background.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"   integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+  
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
     crossorigin="anonymous"></script>
  <script
@@ -27,22 +26,18 @@
     <div class="jumbotron">
       <h1>Take the survey</h1>
       <hr>
-      <!-- Instructions -->
       <p>Answer a few basic questions.</p>
       <p>Then find the friend with the greatest compatibility!</p>
 
-      <!-- buttons panel  -->
 
       <p>
-        <!-- survey button -->
-        <a href="/survey">
+        <a href="app/public/survey">
           <button type="button" class="btn btn-lg btn-primary" aria-label="Left Align">
             <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
             Take the survey
           </button>
         </a>
 
-        <!-- users list button -->
         <a href="/api/friends">
           <button type="button" class="btn btn-default btn-lg">
             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
