--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -4,18 +4,13 @@
 <head>
 	<title>Survey</title>
 
-  <!-- Latest compiled and minified CSS & JS -->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery.js"></script>
+
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 
   <!-- Chosen -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/chosen/1.5.1/chosen.jquery.min.js"></script>
 
-	<!-- Custom css -->
-  <link rel="stylesheet" href="css/background.css">
-  <link rel="stylesheet" href="css/style.css">
 	<style media="screen">
 		a:hover{text-decoration: none;}
 	</style>
@@ -38,8 +33,7 @@
           </a>
 				</span>
 				<span>
-          <!-- friends list button -->
-          <a href="api/friends">
+          <a href="../app/friends">
           <button type="button" class="btn btn-default btn-lg">
             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
             See all friends
