more changes to fix?

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -7,9 +7,7 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS"
     crossorigin="anonymous"></script>
  <script
-    src="https://code.jquery.com/jquery-3.3.1.js"
-    integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-    crossorigin="anonymous"></script>
+    src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
   <style media="screen">
     a:hover {
       text-decoration: none;
@@ -28,7 +26,6 @@
       <hr>
       <p>Answer a few basic questions.</p>
       <p>Then find the friend with the greatest compatibility!</p>
-
 
       <p>
         <a href="app/public/survey">
