--- a/app/public/home.html
+++ b/app/public/home.html
@@ -28,14 +28,14 @@
       <p>Then find the friend with the greatest compatibility!</p>
 
       <p>
-        <a href="app/survey">
+        <a href="/survey">
           <button type="button" class="btn btn-lg btn-primary" aria-label="Left Align">
             <span class="glyphicon glyphicon-list" aria-hidden="true"></span>
             Take the survey
           </button>
         </a>
 
-        <a href="/data/friends">
+        <a href="../api/friends">
           <button type="button" class="btn btn-default btn-lg">
             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
             See all friends
