--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -29,7 +29,7 @@
           </a>
 				</span>
 				<span>
-          <a href="../data/friends.js">
+          <a href="../api/friends.js">
           <button type="button" class="btn btn-default btn-lg">
             <span class="glyphicon glyphicon-globe" aria-hidden="true"></span>
             See all friends
@@ -252,7 +252,7 @@
           ]
         };
         var currentURL = window.location.origin;
-        $.post(currentURL + "/data/friends", userData, function(data) {
+        $.post(currentURL + "/api/friends", userData, function(data) {
           $("#matchName").text(data.name);
 
           $("#resultsModal").modal("toggle");
